@@ -17,6 +17,7 @@ result = ...
     ~isnumeric(s) && ...
     ~islogical(s) && ...
     ~ischar(s) && ...
+    ~isstring(s) && ...
     ~iscell(s) && ...
     ~isstruct(s) && ...
     ~isa(s, 'function_handle') && ...
