@@ -5,7 +5,8 @@
 mlUnit 1.9.7 (in development)
 -------------------------
 
-  - Support for multidimensional cell array output.
+  - Support MATLAB strings for comparison and output.
+  - Support multidimensional cell array output.
     When assert_equals outputs diff information, the structure of 2D cell
     arrays is maintained. The structure of higher dimensions gets linearized.
   - Warn if disable_tests is ineffective, because a suite has been triggered
